--- a/NORI/NORI/NORI.csproj
+++ b/NORI/NORI/NORI.csproj
@@ -265,7 +265,7 @@
       <HintPath>..\packages\Microsoft.Web.WebView2.1.0.2903.40\lib\net462\Microsoft.Web.WebView2.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="NetsuiteLibrary">
-      <HintPath>..\..\..\..\..\..\Desktop\Librerias\NetsuiteLibrary.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\NetsuiteLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -278,7 +278,7 @@
       <HintPath>..\..\..\CFDI\NoriCFDI\bin\x64\Debug\NoriCFDI.dll</HintPath>
     </Reference>
     <Reference Include="NoriSAPB1SDK">
-      <HintPath>..\..\..\..\..\..\Desktop\Librerias\NoriSAPB1SDK.dll</HintPath>
+      <HintPath>..\..\..\CONSOLA\NoriSAPB1SDK\bin\x64\Debug\NoriSAPB1SDK.dll</HintPath>
     </Reference>
     <Reference Include="NoriSDK">
       <HintPath>..\..\..\CONSOLA\NoriSDK\bin\x64\Debug\NoriSDK.dll</HintPath>
@@ -364,6 +364,12 @@
     <Compile Include="API\SocioAPI.cs" />
     <Compile Include="API\Transmitir.cs" />
     <Compile Include="AutVenta.cs" />
+    <Compile Include="frmArticulosSolicitados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmArticulosSolicitados.Designer.cs">
+      <DependentUpon>frmArticulosSolicitados.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormVistaPrevia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1023,6 +1029,31 @@
     <Compile Include="Kiosco\frmSocio.Designer.cs">
       <DependentUpon>frmSocio.cs</DependentUpon>
     </Compile>
+    <Compile Include="Parametrizacion\frmFormPagos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Parametrizacion\frmFormPagos.Designer.cs">
+      <DependentUpon>frmFormPagos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Parametrizacion\frmFormSocios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Parametrizacion\frmFormSocios.Designer.cs">
+      <DependentUpon>frmFormSocios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Parametrizacion\frmFormArt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Parametrizacion\frmFormArt.Designer.cs">
+      <DependentUpon>frmFormArt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Parametrizacion\frmForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Parametrizacion\frmForm.Designer.cs">
+      <DependentUpon>frmForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Parametrizacion\ParametroGrid.cs" />
     <Compile Include="PrintRibbonControllerResources.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -1134,6 +1165,9 @@
       <DependentUpon>frmRestaurante.cs</DependentUpon>
     </Compile>
     <Compile Include="XRDesignRibbonControllerResources.cs" />
+    <EmbeddedResource Include="frmArticulosSolicitados.resx">
+      <DependentUpon>frmArticulosSolicitados.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormVistaPrevia.resx">
       <DependentUpon>FormVistaPrevia.cs</DependentUpon>
     </EmbeddedResource>
@@ -1452,6 +1486,18 @@
     <EmbeddedResource Include="Kiosco\frmKiosco.resx">
       <DependentUpon>frmKiosco.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Parametrizacion\frmFormPagos.resx">
+      <DependentUpon>frmFormPagos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Parametrizacion\frmFormSocios.resx">
+      <DependentUpon>frmFormSocios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Parametrizacion\frmFormArt.resx">
+      <DependentUpon>frmFormArt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Parametrizacion\frmForm.resx">
+      <DependentUpon>frmForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -1535,6 +1581,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\reminder_16x16.png" />
+    <None Include="Resources\user.png" />
     <None Include="Resources\morefunctions_16x16.png" />
     <None Include="Resources\math&amp;trig_16x16.png" />
     <None Include="Resources\summary_32x32.png" />
@@ -1551,9 +1599,7 @@
     <None Include="Resources\logoDTM.ico" />
     <Content Include="Resources\logoDTM.jpeg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Parametrizacion\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
